--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.7"
+    "express-handlebars": "^7.0.7",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.42.0"
