--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "socket.io": "^4.6.2"
   },
   "devDependencies": {
     "eslint": "^8.42.0"
